--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,8 +1,7 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches: [ master ]
+  release
 
 jobs:
 
@@ -12,12 +11,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      
+    - name: Get Latest Release
+      id: latest_version
+      uses: abatilo/release-info-action@v1.1.0
+      
     - name: Build the Docker image
-      run: docker build . -t donate-api -t ${{ secretes.DOCKERHUB_USERNAME }}/donate-api:$(date +%s)
+      run: docker build . -t donate-api -t ${{ secrets.DOCKERHUB_USERNAME }}/donate-api:${{ steps.latest_version.outputs.latest_tag }}
+    
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
+    
     - name: Push Image to DockerHub
-      run: docker push ${{ secretes.DOCKERHUB_USERNAME }}/donate-api
+      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/donate-api
