--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Build the Docker image
-      run: docker build . -t donate-api -t ${{ secrets.DOCKERHUB_USERNAME }}/donate-api:$(date +'%s')
+      run: docker build . -t ${{ secrets.DOCKERHUB_USERNAME }}/donate-api:latest
     
     - name: Login to DockerHub
       uses: docker/login-action@v1 
